fix(droplets): fix navbar alignment and footer overlap
- loginbox_content.html: replace pull-right with navbar-right on nav
  lists and navbar-form; replace dropdown-menu pull-right with
  dropdown-menu-right; fix invalid nested <li><li> structure

- main.less: increase body padding-top/bottom from 40px to 60px so
  the fixed-top navbar and fixed-bottom footer don't overlap content
  (Bootstrap 3 default navbar height is 50px)

--- a/esp/esp/themes/theme_data/droplets/less/main.less
+++ b/esp/esp/themes/theme_data/droplets/less/main.less
@@ -101,8 +101,8 @@ body {
 
 @media (min-width: @navbarCollapseDesktopWidth) {
     body {
-        padding-top: 40px;
-        padding-bottom: 40px;
+        padding-top: 60px;
+        padding-bottom: 60px;
     }
 }
 
